<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Crear_Actividad">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selection"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tvSeleccionarGrupo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layoutRadioButtons"
            android:layout_below="@id/tvSeleccionarGrupo">
            <RadioGroup
                android:id="@+id/radioGroupGrupos"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:text="@string/selectionAsignatura"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tvSeleccionarAsign"
            android:layout_below="@+id/layoutRadioButtons"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/layoutAsignatura"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tvSeleccionarAsign">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:id="@+id/radioGroupAsignaturas"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTituloAct"
            android:layout_below="@+id/layoutAsignatura"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/Hint"
                android:textColorHint="@color/colorPrimaryDark">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etTituloAct"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tituloAct"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutFechaLimite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/layoutTituloAct">
            <LinearLayout
                android:id="@+id/linearLayoutFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/limite"
                    android:textSize="18sp"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:id="@+id/tvFechaLim"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"/>
                <Button
                    android:id="@+id/btnCambiarFecha"
                    android:layout_width="0dp"
                    android:text="@string/cambiar"
                    android:textColor="@color/letter"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></Button>
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:id="@+id/tvDescripcionCrearAct"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@id/layoutFechaLimite"/>

        <ScrollView
            android:layout_width="match_parent"
            android:id="@+id/scrollDescripcion"
            android:layout_marginTop="15dp"
            android:layout_below="@id/tvDescripcionCrearAct"
            android:layout_height="100dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutButtonCrear"

            android:layout_below="@id/scrollDescripcion">

            <Button
                android:layout_centerInParent="true"
                android:layout_width="150dp"
                android:textColor="@color/letter"
                android:backgroundTint="@color/colorAccent"
                android:layout_height="wrap_content"
                android:text="@string/crear"/>
        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
</FrameLayout>
